--- a/style.css
+++ b/style.css
@@ -3,9 +3,14 @@ body {
 }
 
 h1 {
-  font-size: 50px
+  font-size: 50px;
    text-align:center;
   color: darkred;
+}
+h2{
+  font-size: 40px;
+  text-align:center;
+  color:grey;
 }
 
 .titlebox {
